--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,11 @@ dist-ssr
 *.sw?
 
 # Hide from IDE sidebar
-#**/package-lock.json
-#**/package.json
-#**/tsconfig.app.json
-#**/tsconfig.json
-#**/tsconfig.node.json
-#**/vite.config.ts
-#**/vite-env.d.ts
-#**/shims-vue.d.ts
+**/package-lock.json
+**/package.json
+**/tsconfig.app.json
+**/tsconfig.json
+**/tsconfig.node.json
+**/vite.config.ts
+**/vite-env.d.ts
+**/shims-vue.d.ts
